Fixed out of bounds url on Communities share modal (5692)
- changed template for sharing url
- added word-break to fix defect

--- a/css/share/share.less
+++ b/css/share/share.less
@@ -74,6 +74,10 @@
 
 			}
 
+			.community-share-link {
+				word-break : break-all;
+			}
+
 			.message {
 				border-top : 1px solid #dbdbdb;
 				padding    : 0;
